# latticetask

./: grade_table.csv  logbook.csv  main.py  pyproject.toml  test_main.py
